fix: shell layout에 scrollbar-hide 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 @import 'tailwindcss';
 @import 'pretendard/dist/web/static/pretendard.css';
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -10,7 +10,7 @@
   --color-blue: #1d6ff2;
   --color-gray-disabled: #d9d9d9;
   --color-green: #00c473;
-  --color-default: #F5F5F5;
+  --color-default: #f5f5f5;
 
   --color-status-inCooking: #ff830f;
   --color-status-served: #00c473;
@@ -145,6 +145,10 @@ body {
   display: none;
 }
 
+div::-webkit-scrollbar {
+  display: none;
+}
+
 .scrollbar-hide {
   -ms-overflow-style: none;
   /* IE/Edge */
@@ -158,6 +162,6 @@ body {
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-hidden;
   }
 }
